# athrill-target-v850e2m

./: .gitignore  .gitmodules  CMakeLists.txt  E_PACKAGE  E_PACKAGE.darwin  LICENSE.md  MANIFEST  README.md
.github/workflows/: build.yml  packagebuild.yml
build_clang/: Makefile  Makefile.device  Makefile.env
build_linux/: Makefile  Makefile.device  Makefile.device.static  Makefile.env  Makefile.mpu.static  Makefile.static  build.bash
build_mac/: Makefile  Makefile.cpu  Makefile.device  Makefile.env  Makefile.std  athrill2  athrill2 2
src/cpu/: target_cpu.h
src/cpu/config/: cpu_config.c  cpu_config.h  mpu_config.c  mpu_config.h
src/cpu/cpu_common/: cpu_fpu_ops.h  cpu_ops.h
src/cpu/cpu_dec/: op_codeid.h  op_dec.c  op_dec.h  op_dec_types.h  op_format.h  op_parse.c  op_parse.h  op_parse_private.c  op_parse_private.h
src/cpu/cpu_exec/: op_exec.c  op_exec.h  op_exec_arithm.c  op_exec_bit.c  op_exec_branch.c  op_exec_fpu.c  op_exec_load.c  op_exec_logic.c  op_exec_ops.h  op_exec_sat.c  op_exec_spec.c  op_exec_store.c
src/device/: device.c  device.h
src/device/intc/: intc.c
src/device/peripheral/can/: can.c
src/device/peripheral/inc/: can.h  timer32.h  vdev.h
src/device/peripheral/timer/: timer32.c
src/device/peripheral/vdev/: vdev.c  vdev_mmap.c  vdev_private.h  vdev_udp.c
